# __alloy_to_iceberg

./: .dockerignore  .env.example  .excalidraw  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.devops/tf/: grafana.tf  main.tf  variables.tf
.devops/tf/grafana/: dashboard.json
.docker/: Dockerfile  conf-prod.alloy  conf.alloy  conf.alloy.prod  generate-certs.sh  loki.yaml  prometheus.yml  traefik.dynamic.yml  traefik.prod.yml
.docs/: README.md  architecture.md  cli.md  configuration.md  dev-practices.md  kubernetes.md  local-stack.md  polaris.md  qa.md  real-time-prediction.md  runbook.md
.docs/adr/: ADR-001-iceberg-lakehouse-format.md  ADR-002-otlp-canonical-format.md  ADR-003-kafka-streaming-ingestion.md  ADR-004-duckdb-query-engine.md  ADR-005-partitioning-strategy.md  ADR-006-storage-backend.md  ADR-007-databricks-unified-platform.md
.docs/article/: v1.md
.docs/mixins/: redpanda-topic.json  redpanda.json
.github/agents/: data-architect.md  data-engineer.md
.github/workflows/: ci.yml
.tf/: .gitignore  main.tf  output.tf  providers.tf  variables.tf
.tf/grafana/: dashboard.json
configs/: base.py  config.yaml  constants.py  get_queries_id.py  queries.yaml
iceberg_consumer/: Cargo.toml
icerberg_reader_api/: Cargo.toml
java-kafka-stream/: .gitignore  pom.xml
java-kafka-stream/config/: config.yaml
java-kafka-stream/src/main/java/org/example/: Main.java
java-kafka-stream/src/main/java/org/example/dtos/: KeyValueStore.java  OutputLogs.java  OutputMetrics.java
java-kafka-stream/src/main/java/org/example/factory/: LogProcessor.java  MetricProcessor.java  Processor.java
java-kafka-stream/src/main/java/org/example/serializer/: InputSerializer.java  OtlpLogsSerde.java  OtlpMetricsSerde.java
java-kafka-stream/src/main/java/org/example/utils/: GlobalConfig.java  IngestionConfig.java
java-kafka-stream/src/main/resources/: application.properties  logback.xml
java-kafka-stream/src/test/fixtures/: messages.json
java-kafka-stream/src/test/java/org/example/: MainTopologyTest.java
java-kafka-stream/src/test/java/org/example/factory/: MetricProcessorTest.java
java-kafka-stream/src/test/java/org/example/serializer/: InputSerializerTest.java
notebook/: torch.ipynb
scripts/: __init__.py  cli.py  generate_model.py  integration_pipeline.py  metrics_producer.py  predict.py  push_to_blob.py  train.py
src/client/: azure.py  grafana.py  grafana_dto.py  polaris.py  s3.py
src/data/: azure.py  grafana.py  grafana_dto.py  s3.py
src/dataviz/: quick_preview.py
src/features/: base.py  v1.py
src/integration/: batch.py  catalog.py  processor.py  table_manager.py
src/integration/migrations/: migrator.py
src/integration/schema/: log.py  metric.py
src/processing/: __init__.py  convert_df.py  data_processing.py  merge_dataframes.py  normalization.py  oltp_parser.py  split_df_for_training.py
src/prophet/: __init__.py  v1.py
src/pytorch/: device.py  v1.py
src/repository/: duckdb.py
src/sklearn/: v1.py
tests/: conftest.py  test_base_config.py  test_data_processing.py  test_dto_grafana.py  test_features_base.py  test_generate_model.py  test_get_ids.py  test_grafana_to_otlp.py  test_integration_pipeline.py  test_merge_dataframes.py  test_model_settings.py  test_normalization.py  test_push_to_blob.py  test_split_df_for_training.py  test_timerange.py
utils/: __init__.py  askii_art.py  drop_iceberg_table.py  exceptions.py  fake_data.py  grafana_to_otlp.py  iceberg_management.py  logging.py  queries.py  read_config.py  telemetry.py  timerange.py
