[package]
name = "iceberg_consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
futures = "0.3.32"
iceberg = "0.9.0"
iceberg-catalog-rest = "0.9.0"
iceberg-storage-opendal = { version = "0.9.0", features = ["opendal-azdls"] }
log = "0.4.29"
opendal = { version = "0.55.0", features = ["services-azdls"] }
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
