[package]
name = "icerberg_reader_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
datafusion = "53.0.0"
deltalake = { version = "0.31.1", features = ["azure"] }
env_logger = "0.11.10"
iceberg = "0.9.0"
iceberg-catalog-rest = "0.9.0"
iceberg-storage-opendal = { version = "0.9.0", features = ["opendal-azdls"] }
log = "0.4.29"
opendal = { version = "0.55.0", features = ["services-azdls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
